kubernetes/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banka-3-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: banka-3-prod
