kubernetes/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: banka-3-dev
  labels:
    service: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: user-service
  template:
    metadata:
      labels:
        service: user-service
    spec:
      containers:
      - image: harbor.k8s.elab.rs/banka-3/user-service:latest
        imagePullPolicy: Always
        name: user-service
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 2
            memory: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: banka-3-dev
  labels:
    service: user-service
spec:
  type: ClusterIP
  selector:
    service: user-service
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
