kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banka-3-ingress-frontend
  namespace: banka-3-dev
spec:
  ingressClassName: nginx
  rules:
  - host: "banka-3-dev.si.raf.edu.rs"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: frontend
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banka-3-ingress-api
  namespace: banka-3-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: "banka-3-dev.si.raf.edu.rs"
    http:
      paths:
        - pathType: ImplementationSpecific
          path: "/user-service(/|$)(.*)"
          backend:
            service:
              name: user-service
              port:
                number: 8080
        - pathType: ImplementationSpecific
          path: "/email-service(/|$)(.*)"
          backend:
            service:
              name: email-service
              port:
                number: 8081
        - pathType: ImplementationSpecific
          path: "/bank-service(/|$)(.*)"
          backend:
            service:
              name: bank-service
              port:
                number: 8082
        - pathType: ImplementationSpecific
          path: "/exchange-service(/|$)(.*)"
          backend:
            service:
              name: exchange-service
              port:
                number: 8083
